<resources>
    <string name="app_name">BliFi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="sign_out">Sign Out</string>
    <string name="sort_by">Sort by...</string>
    <string name="select">Select</string>
    <string name="select_all">Select all</string>
    <string name="home">Home</string>
    <string name="sign_in">Sign in with your Google account</string>
    <string name="image_display">Image Display</string>
    <string name="password">Password</string>
    <string name="hint_email">Enter e-mail</string>
    <string name="slogan">Never lose your files again</string>
    <string name="file_type">File type unknown</string>
    <string name="name_availability">Name not available</string>
    <string name="string_sign_in">Sign In</string>
    <string name="string_sign_out">Sign Out</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading</string>
    <string name="google_status_fmt">String Status</string>
    <string name="sign_out_and_disconnect">Sign Out and Disconnect</string>
    <string name="signed_out">Signed Out</string>
    <string name="name">Blind File Find</string>
    <string name="accounts">Accounts</string>
    <string name="file_list">File List</string>
    <string name="select_dot">Select...</string>
    <string name="enabled">Google account enabled</string>
    <string name="no_results">No results returned</string>
    <string name="network_available">No network connection available</string>
    <string name="dialog_access">This app needs to access your Google account</string>
    <string name="server_client_id">409862790725-rtu7ennu6on94cgqrt800aa1em9vqh2r.apps.googleusercontent.com</string>
    <string name="network_connection">No network connection available.</string>
    <string name="log_out">Log Out</string>
    <string name="trashcan">Trashcan</string>
    <string name="files">Files</string>
    <string name="file_manager_welcome">Welcome to File Manager</string>
    <string name="access_google_account">This app needs to access your Google account.</string>
    <string name="install_play_services">"This app requires Google Play Services. Please install Google Play Services on your device and relaunch this app. "</string>
    <string name="trash">Trash</string>
    <string name="no_files_to_show">No files to show</string>
    <string name="empty">Empty</string>
    <string name="permanent_delete">Are you sure you want to permanently delete this file?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deletion_1">Android does not have a trash can by default, which is why File Manager creates this trash can for you\n\n</string>
    <string name="deletion_2">To delete a file you can long click it\n\n</string>
    <string name="got_it">Got it!</string>
    <string name="cancel">Cancel</string>
    <string name="deletion_title">Deletion of files</string>

</resources>
