<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/sign_in"
        android:textColor="?attr/colorControlNormal"
        android:textSize="20sp"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvStatus"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/bSignIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:drawableLeft="@drawable/google_drive_logo_small"
        android:drawableStart="@drawable/google_drive_logo_small"
        android:drawablePadding="10dp"
        android:text="@string/string_sign_in"
        android:textSize="20sp"
        android:background="@drawable/box_style"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:layout_below="@+id/tvStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />

    <Button
        android:id="@+id/bSignOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:gravity="center"
        android:drawableLeft="@drawable/google_drive_logo_small"
        android:drawableStart="@drawable/google_drive_logo_small"
        android:drawablePadding="10dp"
        android:text="@string/string_sign_out"
        android:visibility="gone"
        android:textSize="20sp"
        android:background="@drawable/box_style"
        android:textColor="@color/common_google_signin_btn_text_light_default"
        android:layout_below="@+id/tvStatus"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp" />


</RelativeLayout>